Added social icons"

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/master.css">
+	<link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
 	
 	<!-- Include jQuery -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
@@ -65,7 +66,7 @@
 		<div class="cAlign">
 				
 			<img src="img/intel.jpg" alt="Intel Experience" />
-			<a href="https://vimeo.com/127383801" target="_blank" class="linkButton">Vist Site</a>
+			<a href="https://vimeo.com/127383801" target="_blank" class="linkButton">Video</a>
 			<h1>Funniest Videos Online</h1>
 			<p>We teamed up with Intel and Best Buy to create an engaging experience in Best Buy stores across the US. I was in charge of developing the content for the two 9 foot tall totems that welcomed the users into the experience. On the totem there was an intel robot that the user could control by moving thier body around, as well as trigger animations by discovering certain poses. The experience was built with the Xbox Kinect and Unity 3d.</p>
 			
@@ -75,7 +76,7 @@
 			<div class="cAlign">
 
 				<img src="img/odyssey.jpg" alt="Abstract" />
-				<a href="https://vimeo.com/37848172" target="_blank" class="linkButton">Blog</a>
+				<a href="https://vimeo.com/37848172" target="_blank" class="linkButton">Video</a>
 				<h1>Odyssey</h1>
 				<p>Odyssey is an interactive installation focused on exploration and discovery. Odyssey consists of several explorable environments created in Unity and projected in 360° around the user with ambient surround sound. Odyssey leverages the power of motion controls with Kinect to allow for free motion. </p>
 
@@ -101,27 +102,31 @@
 
 	<div class="cAlign cFloat">
 
-		<!-- 1/4 -->
+		<!-- 1/2 -->
 		<div class="oneHalf">
 
 
 			<img class ="myPic" src="img/bioPic.jpg" alt="Me" />
 			<img class="name" src="img/nameSmall.jpg" alt="Me" />
+
+
 		</div>
 
 		<!-- 1/2 -->
 		<div class="oneHalf">
 
 			<!-- About author -->
-			<h4>About Me</h4>
+			<h3>About Me</h3>
 			<p>Hi. Im Joe Pisanzio, I hold New Media Interactive development degree from the Rochester Institute of Technology. I have a passion for creating engaging and interactive experiences. I have an obsession with play and figuring out ways to get people to express themseleves.</p>
 
 			<p>I am an active member of the Chicago Improv Scene and also do some Physical Comedy and Dance. Check out my <a href="http://www.youtube.com/user/wirelesstaco" target="_blank">youtube</a> page for sketch comedy and Vlogs of my adventures. Please take a peak at <a href="http://www.unexpectedwisdom.com" target="_blank"> UnexpectedWisdom.com</a>, a project where I get advice from homeless people. And to keep updated with all the variety of projects I am working on, the best place to look is <a href="http://www.blog.wirelesstaco.com" target="_blank">blog.wirelesstaco.com</a></p>
 
 
 
-			<h4>Contact Me</h4>
-			<a href="#"><img  src="img/contact.jpg" alt="Me" /></a>
+			<h3>Contact Me</h3>
+			<ul class="icons"><li><a class="socicon-youtube" href="http://www.youtube.com/user/wirelesstaco" target="_blank"></a></li><li><a class="socicon-twitter" href="https://twitter.com/wirelesstaco" target="_blank" ></a></li><li><a class="socicon-github" href="https://github.com/Wirelesstaco" target="_blank" ></a></li><li><a class="socicon-instagram" href="https://instagram.com/Wirelesstaco" target="_blank" ></a></li></ul>
+			<a href="#"><img  src="img/contact.jpg" alt="Me" class="contact-img"/></a>
+
 			<div class="blankSeparator"><!-- --></div>
 
 
